<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".Encoder">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">


            <EditText
                android:id="@+id/etenc"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:hint="@string/encoderTextview"
                android:textSize="20sp"
                android:textColor="@color/endColor"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnenc"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buttonEncrypt"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="enc"
                android:textColor="@color/endColor"
                android:backgroundTint="@color/black"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">



            <TextView
                android:id="@+id/enctv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="left"
                android:textColor="@color/endColor"
                android:hint="@string/encoderTextview1"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <Button
                android:id="@+id/btncp2"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buttonCopy"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/endColor"
                android:backgroundTint="@color/black"
                android:onClick="cp2"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>